--- a/gmail-viewer/package.json
+++ b/gmail-viewer/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/next-auth": "^3.13.0",
+    "googleapis": "^144.0.0",
+    "imapflow": "^1.0.179",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
